--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="fundo">
-        <h1>PROJETINHO</h1>
+        <h1>PROJETINHO DE CRIA</h1>
         
         <div class="calc">
             <h2>Calculadora</h2>
@@ -21,7 +21,7 @@
             <table>
                 <tr>
                     <td><button class="botao"onclick="limpar()">AC</button></td>
-                    <td><button id="botao"></button></td>
+                    <td><button class="botao1" input type="image" img src="imagens/clean.png"></button></td>
                     <td><button class="botao" onclick="insert('/')">/</button></td>
                     <td><button class="botao" onclick="insert('X')">X</button></td>
                 </tr>
